tests/passing/func-decl.tk
# tarik (c) Nikolas Wipper 2025
# /tk test
# /tk pass

fn blank_func() {}

fn parameter_func(i32 param) {}

fn vararg_func(...) {}

fn i32.static_member_func() {}

fn i32.copy_member_func(this) {}

fn i32.reference_member_func(*this) {}

extern!(void, extern_func, void);
