tests/failing/eof0.tk
# tarik (c) Nikolas Wipper 2025
# /tk test
# /tk fail

struct unended {
# /tk error
